Diagram's visibility was fixed

--- a/src/app/diagram/diagram.component.scss
+++ b/src/app/diagram/diagram.component.scss
@@ -19,10 +19,14 @@
   fill: $colorDarkGray;
 }
 
-.bar.positive {
-  fill: $colorBarPositive;
-}
+//.bar.positive {
+//  fill: $colorBarPositive;
+//}
+//
+//.bar.negative {
+//  fill: $colorBarNegative;
+//}
 
-.bar.negative {
-  fill: $colorBarNegative;
+.invisible {
+  visibility: hidden;
 }
